invisible sidebar search text css fix

--- a/themes/openbroadcaster/style.scss
+++ b/themes/openbroadcaster/style.scss
@@ -95,7 +95,6 @@ button, input[type=submit], input[type=reset], input[type=button], a.button
 #sidebar_search_playlist_input, #sidebar_search_media_input
 {
   background-color: rgba(0,0,0,0.3);
-  color: #fff;
 }
 
 .context-menu, .my_searches_context_menu
